--- a/api/build.gradle
+++ b/api/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
-	testImplementation 'com.h2database:h2:1.4.200'
+//	testImplementation 'com.h2database:h2:1.4.200'
 }
 
 test {
