finally connect postgres

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -2,7 +2,15 @@ spring:
   datasource:
     url: jdbc:postgresql:pharmagator
     username: postgres
-    password: 161803
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: validate
+
+
+pharmagator:
+  data-providers:
+    apteka-ds:
+      url: https://api-int.apteka-ds.com.ua/api/v1
+      category-fetch-url: /category-menu
+      category-path: /cat-prods-by-page
