--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.eleks.academy'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = "17"
+sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -19,20 +19,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
-	implementation 'org.postgresql:postgresql:42.2.24.jre7'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.postgresql:postgresql:42.2.24'
 	implementation 'org.flywaydb:flyway-core:7.15.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-	compileOnly 'org.projectlombok:lombok:1.18.20'
-	annotationProcessor 'org.projectlombok:lombok:1.18.20'
-	testCompileOnly 'org.projectlombok:lombok:1.18.20'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
-//	testImplementation 'com.h2database:h2:1.4.200'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.h2database:h2:1.4.200'
 }
 
 test {
 	useJUnitPlatform()
 }
-targetCompatibility = JavaVersion.VERSION_17
