--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql:pharmagator
+    url: jdbc:postgresql://localhost:5433/pharmagator
     username: postgres
     password: postgres
   jpa:
